# Deliberately its own workspace (the [workspace] table below), not a member
# of the repo-root Cargo workspace: U1A's owned path is ui/ only, and this
# keeps the shell's heavy GUI dependency tree (wry, tao, webview2) out of
# every other lane's `cargo build --workspace`.
[workspace]
resolver = "2"

[package]
name = "operant-shell"
version = "1.1.0"
edition = "2021"
rust-version = "1.90"
license = "Apache-2.0"
authors = ["Josef Long"]
description = "Operant C13 shell UI: Tauri v2 host for the tray, command palette, and run viewer."
repository = "https://github.com/AlpharomeroJL/operant"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# F2 (updater-wiring): the updater plugin itself (docs/KNOWN_ISSUES.md, checks
# release/KEYS.md's Ed25519 pubkey against downloaded artifacts) and the
# notification plugin used only to show the "restart to update" toast. tokio
# gives the background checker its 24h timer; tauri already runs its own
# tokio runtime internally (tauri::async_runtime::spawn), this just adds the
# `time` API surface on top of it.
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
# The `test` feature gives us tauri::test::{mock_builder, mock_context,
# noop_assets} and MockRuntime, so tests/updater_signature.rs can build a real
# Tauri app without the Wry runtime. This matters on two counts: the Wry event
# loop (tao) must be created on the main thread, but cargo runs each test on a
# worker thread, and a cargo-test binary that links tao at all crashes at load
# on Windows unless build.rs embeds the Common-Controls v6 manifest (see
# build.rs and docs/adr/0001-tauri-test-binaries-common-controls-manifest.md).
# MockRuntime sidesteps the main-thread requirement.
tauri = { version = "2", features = ["test"] }
# Used only by tests/updater_signature.rs: a fixture HTTP server (tiny_http)
# and the Url type tauri_plugin_updater's endpoints() takes (url is otherwise
# only a transitive dependency, not nameable directly). tokio's rt and macros
# features back the #[tokio::test] runtime the async check/download flow runs
# on; the non-test build keeps only the `time` feature above.
tiny_http = "0.12"
url = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = "thin"
strip = true
